[tool.poetry]
name = "xgboost_causalml_discovery"
version = "0.1.0"
description = "base packages"
authors = ["Kyle Asano <kasano@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
